style/local.css
/***********/
/* fonts */
/*
@font-face {
    font-family: "Open Sans";
    src: url(Open_Sans/OpenSans-Regular.ttf) format("truetype");
}
@font-face {
    font-family: "Roboto";
    src: url(Open_Sans/Roboto-Regular.ttf) format("truetype");
}
*/

/***********/
/* misc */

body {
    /*
    font-family: 'Roboto', sans-serif;
    font-family: 'Open Sans', sans-serif;
    */
    font-family: sans-serif;

    background: #DFDFDF;
}


/*
http://stackoverflow.com/questions/4918018/eliminate-padding-margin-around-pics-in-td-elements
Finally, I add this line, which removes that stupid spacing which appears all the time, the one that isn't padding, margin or anything.
*/
table, tr, td, th, tbody, thead{vertical-align:baseline}

h1, h2, h3, h4, h5, h6, th, td, caption { font-weight:normal; }

th, td {
    text-align: left;
}

img { border: 0; }



.page {
    /*background: WhiteSmoke;*/
    margin: 10px;
}








/***********/
/* titles */




.title_line {
    font-weight: bold;
    background: #d5d9e8;
    color: #424242;
    padding: 2px;
    padding-left: 6px;
    margin: 0px;
}

.title_line_text {
    font-weight: bold;
    color: #424242;

}





.section_title {
    font-weight: bold;
    background: #DFDFDF;
    color: #424242;
    font-size: 80%;
    padding: 2px;
    padding-top: 10px;
}

.section {
    width: 100%;
    background: WhiteSmoke;
}



/*************/
/* text */


.valueOutOfRange {
    color: red;

}






.category_title {
    font-weight: bold;
    padding: 0px 3px 0px 3px;
}




#jsoneditor {
    background: WhiteSmoke;
}






.input_section {
    width: 100%;
    margin-bottom: 5px;
}

.title_bar {
    font-weight: bold;
    background: #bbc3e4;
    color: #424242;
    border: 1px solid grey;
    padding: 2px;
    padding-left: 6px;
}

.title_bar_text {
    font-weight: bold;
    color: #424242;

}


/***********/
/* misc */

.drawer {
    padding: 2px;
    background: WhiteSmoke;
    margin-bottom: 0px;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: grey;
    margin-right: 5px;
    border-right-width: 1px;
    border-right-style: solid;
    border-right-color: grey;
    margin-left: 5px;
    border-left-width: 1px;
    border-left-style: solid;
    border-left-color: grey;
}


.param_section {
    margin: 0px;
    padding: 0px;
}


.param_section_content {
    padding: 2px;
    background: WhiteSmoke;
    margin-bottom: 0px;
}




/**************/
/* selectors */


.selector_set {
    background: #d9dce6;
    padding: 3px;
    margin: 2px;
}


.selector_set select {
    background: transparent;
    padding: 5px;
    line-height: 1;
    border: 0;
    border-radius: 0;
    height: 34px;
}


.selector_set span {
    white-space: nowrap;
}



.selector {
    margin: 0px;
    padding: 1px 3px 1px 3px;
}



#section_module { background: #ffb300; }
#section_array { background: #ff5d00; }
#section_DC { background: #b092c4; }
#section_inverter { background: #86c974; }
#section_AC { background: #8188a1; }


/*************/
/* sections */


#status {
    padding:2px;
    margin:0;
    background: Lavender;
    border-color: black;
    border-width: 0.1em;
    border-bottom-style: solid;
    font-size: 0.7em;


}

#system_frame {
    float: left;
    margin-right: 25px;
    width: 500px;
}

#config_frame {
    /*height: 100px;*/
}

#drawing_frame_preview {
    float: left;
    background: WhiteSmoke;
    width:600px;
}

#drawing_frame {
    float: left;
    background: WhiteSmoke;
    width:100%;
}



/***********/
/* Drawing */




.drawing {
    margin: 10px;
}




/***********/
/* SVG */

.svg_drawing {
    width: 100%;
    background: white;

}

.svg_drawing_preview {
    width: 100%;
    background: white;

}


path {
    stroke: steelblue;
    stroke-width: 1;
    fill: none;
}




svg {
    border-color: #690000;
    border-width: 0.05em;
    border-style: solid;

}

